# ticket-priority-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.runtime.txt  requirements.txt
app/: __init__.py  benchmarking.py  main.py  model.py  prediction.py
app/static/: app.js  index.html  styles.css
docs/: deployment.md  design-brief.md
modal_app/: __init__.py  data.py  export.py  service.py  train.py
tests/: __init__.py  test_data.py  test_export.py  test_prediction.py
