[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-ticket-priority-classifier"
version = "0.1.0"
description = "A Modal-trained, ONNX-optimized support-ticket priority classifier."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
